# projeto_aplicado_3

./: README.md  devbox.json
app/: pyproject.toml
